php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #31361 simplexml/domxml segfault when adding node twice
Submitted: 2004-12-31 03:46 UTC Modified: 2005-01-02 16:49 UTC
From: aidan@php.net Assigned:
Status: Closed Package: DOM XML related
PHP Version: 5CVS-2004-12-31 (dev) OS:
Private report: No CVE-ID: None
 [2004-12-31 03:46 UTC] aidan@php.net
Description:
------------
Using the simplexml_add_element function (which uses simplexml/domxml) produces a segfault when adding a node twice.

Reproduce code:
---------------
http://rafb.net/paste/results/FuUMWn71.html

Actual result:
--------------
http://rafb.net/paste/results/tfN2FJ51.html

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2004-12-31 12:18 UTC] derick@php.net
Always add the scripts to the report when filing one... and where is the backtrace?
 [2005-01-02 16:49 UTC] rrichards@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC