Fixed bug #31361 (simplexml/domxml segfault when adding node twice)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@176283 c90b9560-bf6c-de11-be94-00142212c4b1